--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">
+        <h1 class="hero-title section-title">
           Treat yourself or a loved one to our finest ingredients for a moment
           of pure delight!
         </h1>
@@ -52,7 +52,7 @@
         <a class="hero-btn-scroll" href="#features">scroll down</a>
       </section>
       <section id="features" class="features">
-        <h2 hidden>Features</h2>
+        <h2 class="visually-hidden">Features</h2>
         <ul class="features-list">
           <li class="features-item">
             <h3 class="features-subtitle">Unsurpassed taste</h3>
@@ -84,157 +84,159 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL <span>TASTE</span> SENSATION</h2>
-        <p>
+      <section class="taste">
+        <h2 class="taste-title section-title">
+          IT ALL ADDS UP TO ONE EXCEPTIONAL <span class="title-accent">TASTE</span> SENSATION
+        </h2>
+        <p class="taste-text">
           At Simply Chocolate, we believe that the secret to exceptional
           chocolate is in the details. From the sourcing of the finest
           ingredients to the careful crafting of each individual piece, every
           step of our process adds up to one exceptional taste sensation.
         </p>
-        <ul>
-          <li>
-            <img
+        <ul class="taste-list">
+          <li class="taste-item">
+            <img class="taste-image"
               src="/images/taste-img-1.png"
               alt="mILK CHOCOLATE"
               width="206"
               height="160"
             />
-            <h3>mILK CHOCOLATE</h3>
+            <h3 class="taste-subtitle">mILK CHOCOLATE</h3>
           </li>
-          <li>
-            <img
+          <li class="taste-item">
+            <img class="taste-image"
               src="/images/taste-img-2.png"
               alt="Milk"
               width="206"
               height="160"
             />
-            <h3>Milk</h3>
+            <h3 class="taste-subtitle">Milk</h3>
           </li>
           <li>
-            <img
+            <img class="taste-image"
               src="/images/taste-img-3.png"
               alt="nuts"
               width="206"
               height="160"
             />
-            <h3>nuts</h3>
-          </li>
+            <h3 class="taste-subtitle">nuts</h3>
+          </li class="taste-item">
           <li>
-            <img
+            <img lass="taste-image"
               src="/images/taste-img-4.png"
               alt="sEMI - SWEET CHOCOLATE"
               width="206"
               height="160"
             />
-            <h3>sEMI - SWEET CHOCOLATE</h3>
+            <h3 class="taste-subtitle">sEMI - SWEET CHOCOLATE</h3>
           </li>
         </ul>
       </section>
-      <section id="made">
-        <h2>hOW IT’S made?</h2>
-        <img
+      <section id="made" class="made">
+        <h2 class="made-title section-title">hOW IT’S <span>made?</span></h2>
+        <img class="made-image"
           src="/images/taste-img-5.jpg"
           alt="Liquid chocolate"
           width="600"
           height="400"
         />
-        <h3>
+        <h3 class="made-subtitle">
           Try our chocolates today and discover the perfect balance of flavor
         </h3>
-        <ul>
-          <li>
-            <p>
+        <ul class="made-list">
+          <li class="made-item">
+            <p class="made-item-text">
               Heat the milk in a saucepan without bringing it to a boil. Add
               sugar and cocoa powder.
             </p>
           </li>
-          <li>
-            <p>
+          <li class="made-item">
+            <p class="made-item-text">
               At the same time, prepare a water bath. Melt the butter on it.
             </p>
           </li>
-          <li>
-            <p>
+          <li class="made-item">
+            <p class="made-item-text">
               "Mix" the milk mixture and already liquid butter. Mix thoroughly
               with a silicone spatula so that the mass becomes uniform and
               silky.
             </p>
           </li>
-          <li>
-            <p>Heat the mixture over low heat, letting it barely boil.</p>
+          <li class="made-item">
+            <p class="made-item-text">Heat the mixture over low heat, letting it barely boil.</p>
           </li>
-          <li>
-            <p>
+          <li class="made-item">
+            <p class="made-item-text">
               Pour the chocolate into special containers (can be replaced with
               ice molds). Allow to cool and harden.
             </p>
           </li>
         </ul>
       </section>
-      <section id="loved">
-        <h2>chocolate is loved</h2>
-        <ul>
-          <li>
-            <img
+      <section id="loved" class="loved">
+        <h2 class="loved-title section-title"><span>chocolate</span> is loved</h2>
+        <ul class="loved-list">
+          <li class="loved-item">
+            <img class="loved-image"
               src="/images/taste-img-6.jpg"
               alt="Victoria Dobrzhanska"
               width="80"
               height="80"
             />
-            <h3>Victoria Dobrzhanska</h3>
-            <p>
+            <h3 class="loved-subtitle">Victoria Dobrzhanska</h3>
+            <p class="loved-text">
               I love this chocolate bar. Perfect combination of light crispy
               wafer, covered in a thin layer chocolate.
             </p>
           </li>
-          <li>
-            <img
+          <li class="loved-item">
+            <img class="loved-image"
               src="/images/taste-img-7.jpg"
               alt="Nazar Babenko"
               width="80"
               height="80"
             />
-            <h3>Nazar Babenko</h3>
-            <p>
+            <h3 class="loved-subtitle">Nazar Babenko</h3>
+            <p class="loved-text">
               This chocolate confection is a delight! A delight! The wafer is
               light and crisp, the hazelnut cream is smooth, and the chocolate
               is good.
             </p>
           </li>
-          <li>
-            <img
+          <li class="loved-item">
+            <img class="loved-image"
               src="/images/taste-img-8.jpg"
               alt="Olena Kampusch"
               width="80"
               height="80"
             />
-            <h3>Olena Kampusch</h3>
-            <p>
+            <h3 class="loved-subtitle">Olena Kampusch</h3>
+            <p class="loved-text">
               Chocolate is a family favourite treat. Love the delicious smooth
               chocolate and the creaminess inside. The wafer is soft but
               crunchy.
             </p>
           </li>
         </ul>
-        <button type="button">Leave a review</button>
+        <button class="loved-btn" type="button">Leave a review</button>
       </section>
     </main>
-    <footer>
-      <p>Chocolate a delicious cure for a bad day</p>
-      <p>Contact us</p>
-      <address>
-        <ul>
-          <li><a href="tel:+380684439426">+380 (68) 443-94-26</a></li>
-          <li>
-            <a href="mailto:simplycthaoc@gmail.com">simplycthaoc@gmail.com</a>
+    <footer class="footer">
+      <p class="footer-text"><span>Chocolate</span> a delicious cure for a bad day</p>
+      <p class="footer-subtitle">Contact us</p>
+      <address class="footer-adress">
+        <ul class="footer-adress-list">
+          <li class="footer-adress-item"><a class="footer-adress-link" href="tel:+380684439426">+380 (68) 443-94-26</a></li>
+          <li class="footer-adress-item">
+            <a class="footer-adress-link" href="mailto:simplycthaoc@gmail.com">simplycthaoc@gmail.com</a>
           </li>
         </ul>
       </address>
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="#made">How it’s made?</a></li>
-        <li><a href="#loved">Chocolate is loved</a></li>
+      <ul class="footer-menu-list">
+        <li class="footer-menu-link"><a href="">Home</a></li>
+        <li class="footer-menu-link"><a href="#made">How it’s made?</a></li>
+        <li class="footer-menu-link"><a href="#loved">Chocolate is loved</a></li>
       </ul>
     </footer>
   </body>
