--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
         </ul>
       </address>
       <ul class="footer-menu-list">
-        <li class="footer-menu-link"><a href="">Home</a></li>
-        <li class="footer-menu-link"><a href="#made">How it’s made?</a></li>
-        <li class="footer-menu-link"><a href="#loved">Chocolate is loved</a></li>
+        <li class="footer-menu-item"><a class="footer-menu-link" href="">Home</a></li>
+        <li class="footer-menu-item"><a class="footer-menu-link" href="#made">How it’s made?</a></li>
+        <li class="footer-menu-item"><a class="footer-menu-link" href="#loved">Chocolate is loved</a></li>
       </ul>
     </footer>
   </body>
