--- a/index.html
+++ b/index.html
@@ -23,221 +23,236 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a class="header-logo" href="/index.html"
-          ><span class="header-logo-italic">SIMPLY</span> CHOCOLATE</a
-        >
-        <ul class="header-menu-list">
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="">Home</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="#made">How it’s made?</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="#loved">Chocolate is loved</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- nav>a+ul>li*3>a -->
+      <div class="container">
+        <nav class="header-nav">
+          <a class="header-logo" href="/index.html"
+            ><span class="header-logo-italic">SIMPLY</span> CHOCOLATE</a
+          >
+          <ul class="header-menu-list">
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="">Home</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="#made">How it’s made?</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="#loved">Chocolate is loved</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title section-title">
-          Treat yourself or a loved one to our finest ingredients for a moment
-          of pure delight!
-        </h1>
-        <button class="hero-btn" type="button">Buy now</button>
-        <a class="hero-btn-link" href="#made">How it’s made</a>
-        <a class="hero-btn-scroll" href="#features">scroll down</a>
+        <div class="container">
+          <div class="hero-wrapper">
+            <h1 class="hero-title">
+              Treat yourself or a loved one to our finest ingredients for a moment
+              of pure delight!
+            </h1>
+            <button class="hero-btn" type="button">Buy now</button>
+            <a class="hero-btn-link" href="#made">How it’s made</a>
+            <a class="hero-btn-scroll" href="#features">scroll down</a>
+          </div>
+        </div>
       </section>
-      <section id="features" class="features">
-        <h2 class="visually-hidden">Features</h2>
-        <ul class="features-list">
-          <li class="features-item">
-            <h3 class="features-subtitle">Unsurpassed taste</h3>
-            <p class="features-item-text">
-              Crafted with the finest quality cocoa beans and a dedication to
-              perfection, each bite is a decadent experience that simply cannot
-              be matched. Savor the richness and complexity of our Unsurpassed
-              Taste and discover a new level of chocolate bliss.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Affordable price</h3>
-            <p class="features-item-text">
-              Indulge in high-quality chocolate without breaking the bank with
-              Simply Chocolate's selection of affordable treats. Enjoy
-              mouth-watering truffles and velvety chocolate bars without
-              sacrificing taste or quality. Browse our selection and indulge in
-              affordable luxury today.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Own production</h3>
-            <p class="features-item-text">
-              We take pride in our own production process, ensuring that every
-              step is carefully crafted to perfection. From selecting the finest
-              ingredients to handcrafting each piece, our attention to detail is
-              evident in every bite.
-            </p>
-          </li>
-        </ul>
+        <section id="features" class="features">
+          <div class="container">
+            <h2 class="visually-hidden">Features</h2>
+            <ul class="features-list">
+              <li class="features-item">
+                <h3 class="features-subtitle">Unsurpassed taste</h3>
+                <p class="features-item-text">
+                  Crafted with the finest quality cocoa beans and a dedication to
+                  perfection, each bite is a decadent experience that simply cannot
+                  be matched. Savor the richness and complexity of our Unsurpassed
+                  Taste and discover a new level of chocolate bliss.
+                </p>
+              </li>
+              <li class="features-item">
+                <h3 class="features-subtitle">Affordable price</h3>
+                <p class="features-item-text">
+                  Indulge in high-quality chocolate without breaking the bank with
+                  Simply Chocolate's selection of affordable treats. Enjoy
+                  mouth-watering truffles and velvety chocolate bars without
+                  sacrificing taste or quality. Browse our selection and indulge in
+                  affordable luxury today.
+                </p>
+              </li>
+              <li class="features-item">
+                <h3 class="features-subtitle">Own production</h3>
+                <p class="features-item-text">
+                  We take pride in our own production process, ensuring that every
+                  step is carefully crafted to perfection. From selecting the finest
+                  ingredients to handcrafting each piece, our attention to detail is
+                  evident in every bite.
+                </p>
+              </li>
+            </ul>
+          </div>
       </section>
       <section class="taste">
-        <h2 class="taste-title section-title">
-          IT ALL ADDS UP TO ONE EXCEPTIONAL <span class="title-accent">TASTE</span> SENSATION
-        </h2>
-        <p class="taste-text">
-          At Simply Chocolate, we believe that the secret to exceptional
-          chocolate is in the details. From the sourcing of the finest
-          ingredients to the careful crafting of each individual piece, every
-          step of our process adds up to one exceptional taste sensation.
-        </p>
-        <ul class="taste-list">
-          <li class="taste-item">
-            <img class="taste-image"
-              src="/images/taste-img-1.png"
-              alt="mILK CHOCOLATE"
-              width="206"
-              height="160"
-            />
-            <h3 class="taste-subtitle">mILK CHOCOLATE</h3>
-          </li>
-          <li class="taste-item">
-            <img class="taste-image"
-              src="/images/taste-img-2.png"
-              alt="Milk"
-              width="206"
-              height="160"
-            />
-            <h3 class="taste-subtitle">Milk</h3>
-          </li>
-          <li>
-            <img class="taste-image"
-              src="/images/taste-img-3.png"
-              alt="nuts"
-              width="206"
-              height="160"
-            />
-            <h3 class="taste-subtitle">nuts</h3>
-          </li class="taste-item">
-          <li>
-            <img lass="taste-image"
-              src="/images/taste-img-4.png"
-              alt="sEMI - SWEET CHOCOLATE"
-              width="206"
-              height="160"
-            />
-            <h3 class="taste-subtitle">sEMI - SWEET CHOCOLATE</h3>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="taste-title section-title">
+            IT ALL ADDS UP TO ONE EXCEPTIONAL <span class="title-accent">TASTE</span> SENSATION
+          </h2>
+          <p class="taste-text">
+            At Simply Chocolate, we believe that the secret to exceptional
+            chocolate is in the details. From the sourcing of the finest
+            ingredients to the careful crafting of each individual piece, every
+            step of our process adds up to one exceptional taste sensation.
+          </p>
+          <ul class="taste-list">
+            <li class="taste-item">
+              <img class="taste-image"
+                src="/images/taste-img-1.png"
+                alt="mILK CHOCOLATE"
+                width="206"
+                height="160"
+              />
+              <h3 class="taste-subtitle">mILK CHOCOLATE</h3>
+            </li>
+            <li class="taste-item">
+              <img class="taste-image"
+                src="/images/taste-img-2.png"
+                alt="Milk"
+                width="206"
+                height="160"
+              />
+              <h3 class="taste-subtitle">Milk</h3>
+            </li>
+            <li>
+              <img class="taste-image"
+                src="/images/taste-img-3.png"
+                alt="nuts"
+                width="206"
+                height="160"
+              />
+              <h3 class="taste-subtitle">nuts</h3>
+            </li class="taste-item">
+            <li>
+              <img class="taste-image"
+                src="/images/taste-img-4.png"
+                alt="sEMI - SWEET CHOCOLATE"
+                width="206"
+                height="160"
+              />
+              <h3 class="taste-subtitle">sEMI - SWEET CHOCOLATE</h3>
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="made" class="made">
-        <h2 class="made-title section-title">hOW IT’S <span>made?</span></h2>
-        <img class="made-image"
-          src="/images/taste-img-5.jpg"
-          alt="Liquid chocolate"
-          width="600"
-          height="400"
-        />
-        <h3 class="made-subtitle">
-          Try our chocolates today and discover the perfect balance of flavor
-        </h3>
-        <ul class="made-list">
-          <li class="made-item">
-            <p class="made-item-text">
-              Heat the milk in a saucepan without bringing it to a boil. Add
-              sugar and cocoa powder.
-            </p>
-          </li>
-          <li class="made-item">
-            <p class="made-item-text">
-              At the same time, prepare a water bath. Melt the butter on it.
-            </p>
-          </li>
-          <li class="made-item">
-            <p class="made-item-text">
-              "Mix" the milk mixture and already liquid butter. Mix thoroughly
-              with a silicone spatula so that the mass becomes uniform and
-              silky.
-            </p>
-          </li>
-          <li class="made-item">
-            <p class="made-item-text">Heat the mixture over low heat, letting it barely boil.</p>
-          </li>
-          <li class="made-item">
-            <p class="made-item-text">
-              Pour the chocolate into special containers (can be replaced with
-              ice molds). Allow to cool and harden.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="made-title section-title">hOW IT’S <span>made?</span></h2>
+          <img class="made-image"
+            src="/images/taste-img-5.jpg"
+            alt="Liquid chocolate"
+            width="600"
+            height="400"
+          />
+          <h3 class="made-subtitle">
+            Try our chocolates today and discover the perfect balance of flavor
+          </h3>
+          <ul class="made-list">
+            <li class="made-item">
+              <p class="made-item-text">
+                Heat the milk in a saucepan without bringing it to a boil. Add
+                sugar and cocoa powder.
+              </p>
+            </li>
+            <li class="made-item">
+              <p class="made-item-text">
+                At the same time, prepare a water bath. Melt the butter on it.
+              </p>
+            </li>
+            <li class="made-item">
+              <p class="made-item-text">
+                "Mix" the milk mixture and already liquid butter. Mix thoroughly
+                with a silicone spatula so that the mass becomes uniform and
+                silky.
+              </p>
+            </li>
+            <li class="made-item">
+              <p class="made-item-text">Heat the mixture over low heat, letting it barely boil.</p>
+            </li>
+            <li class="made-item">
+              <p class="made-item-text">
+                Pour the chocolate into special containers (can be replaced with
+                ice molds). Allow to cool and harden.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="loved" class="loved">
-        <h2 class="loved-title section-title"><span>chocolate</span> is loved</h2>
-        <ul class="loved-list">
-          <li class="loved-item">
-            <img class="loved-image"
-              src="/images/taste-img-6.jpg"
-              alt="Victoria Dobrzhanska"
-              width="80"
-              height="80"
-            />
-            <h3 class="loved-subtitle">Victoria Dobrzhanska</h3>
-            <p class="loved-text">
-              I love this chocolate bar. Perfect combination of light crispy
-              wafer, covered in a thin layer chocolate.
-            </p>
-          </li>
-          <li class="loved-item">
-            <img class="loved-image"
-              src="/images/taste-img-7.jpg"
-              alt="Nazar Babenko"
-              width="80"
-              height="80"
-            />
-            <h3 class="loved-subtitle">Nazar Babenko</h3>
-            <p class="loved-text">
-              This chocolate confection is a delight! A delight! The wafer is
-              light and crisp, the hazelnut cream is smooth, and the chocolate
-              is good.
-            </p>
-          </li>
-          <li class="loved-item">
-            <img class="loved-image"
-              src="/images/taste-img-8.jpg"
-              alt="Olena Kampusch"
-              width="80"
-              height="80"
-            />
-            <h3 class="loved-subtitle">Olena Kampusch</h3>
-            <p class="loved-text">
-              Chocolate is a family favourite treat. Love the delicious smooth
-              chocolate and the creaminess inside. The wafer is soft but
-              crunchy.
-            </p>
-          </li>
-        </ul>
-        <button class="loved-btn" type="button">Leave a review</button>
+        <div class="container">
+          <h2 class="loved-title section-title"><span>chocolate</span> is loved</h2>
+          <ul class="loved-list">
+            <li class="loved-item">
+              <img class="loved-image"
+                src="/images/taste-img-6.jpg"
+                alt="Victoria Dobrzhanska"
+                width="80"
+                height="80"
+              />
+              <h3 class="loved-subtitle">Victoria Dobrzhanska</h3>
+              <p class="loved-text">
+                I love this chocolate bar. Perfect combination of light crispy
+                wafer, covered in a thin layer chocolate.
+              </p>
+            </li>
+            <li class="loved-item">
+              <img class="loved-image"
+                src="/images/taste-img-7.jpg"
+                alt="Nazar Babenko"
+                width="80"
+                height="80"
+              />
+              <h3 class="loved-subtitle">Nazar Babenko</h3>
+              <p class="loved-text">
+                This chocolate confection is a delight! A delight! The wafer is
+                light and crisp, the hazelnut cream is smooth, and the chocolate
+                is good.
+              </p>
+            </li>
+            <li class="loved-item">
+              <img class="loved-image"
+                src="/images/taste-img-8.jpg"
+                alt="Olena Kampusch"
+                width="80"
+                height="80"
+              />
+              <h3 class="loved-subtitle">Olena Kampusch</h3>
+              <p class="loved-text">
+                Chocolate is a family favourite treat. Love the delicious smooth
+                chocolate and the creaminess inside. The wafer is soft but
+                crunchy.
+              </p>
+            </li>
+          </ul>
+          <button class="loved-btn" type="button">Leave a review</button>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <p class="footer-text"><span>Chocolate</span> a delicious cure for a bad day</p>
-      <p class="footer-subtitle">Contact us</p>
-      <address class="footer-adress">
-        <ul class="footer-adress-list">
-          <li class="footer-adress-item"><a class="footer-adress-link" href="tel:+380684439426">+380 (68) 443-94-26</a></li>
-          <li class="footer-adress-item">
-            <a class="footer-adress-link" href="mailto:simplycthaoc@gmail.com">simplycthaoc@gmail.com</a>
-          </li>
+      <div class="container">
+        <p class="footer-text"><span>Chocolate</span> a delicious cure for a bad day</p>
+        <p class="footer-subtitle">Contact us</p>
+        <address class="footer-adress">
+          <ul class="footer-adress-list">
+            <li class="footer-adress-item"><a class="footer-adress-link" href="tel:+380684439426">+380 (68) 443-94-26</a></li>
+            <li class="footer-adress-item">
+              <a class="footer-adress-link" href="mailto:simplycthaoc@gmail.com">simplycthaoc@gmail.com</a>
+            </li>
+          </ul>
+        </address>
+        <ul class="footer-menu-list">
+          <li class="footer-menu-item"><a class="footer-menu-link" href="">Home</a></li>
+          <li class="footer-menu-item"><a class="footer-menu-link" href="#made">How it’s made?</a></li>
+          <li class="footer-menu-item"><a class="footer-menu-link" href="#loved">Chocolate is loved</a></li>
         </ul>
-      </address>
-      <ul class="footer-menu-list">
-        <li class="footer-menu-item"><a class="footer-menu-link" href="">Home</a></li>
-        <li class="footer-menu-item"><a class="footer-menu-link" href="#made">How it’s made?</a></li>
-        <li class="footer-menu-item"><a class="footer-menu-link" href="#loved">Chocolate is loved</a></li>
-      </ul>
+      </div>
     </footer>
   </body>
 </html>
