--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-nav">
           <a class="header-logo" href="/index.html"
             ><span class="header-logo-italic">SIMPLY</span> CHOCOLATE</a
@@ -50,9 +50,11 @@
               Treat yourself or a loved one to our finest ingredients for a moment
               of pure delight!
             </h1>
-            <button class="hero-btn" type="button">Buy now</button>
-            <a class="hero-btn-link" href="#made">How it’s made</a>
-            <a class="hero-btn-scroll" href="#features">scroll down</a>
+            <div class="hero-button">
+              <button class="hero-btn" type="button">Buy now</button>
+              <a class="hero-btn-link" href="#made">How it’s made</a>
+              <a class="hero-btn-scroll" href="#features">scroll down</a>
+            </div>
           </div>
         </div>
       </section>
@@ -103,7 +105,7 @@
             step of our process adds up to one exceptional taste sensation.
           </p>
           <ul class="taste-list">
-            <li class="taste-item">
+            <li class="taste-item-first">
               <img class="taste-image"
                 src="/images/taste-img-1.png"
                 alt="mILK CHOCOLATE"
@@ -112,7 +114,7 @@
               />
               <h3 class="taste-subtitle">mILK CHOCOLATE</h3>
             </li>
-            <li class="taste-item">
+            <li class="taste-item-second">
               <img class="taste-image"
                 src="/images/taste-img-2.png"
                 alt="Milk"
@@ -121,7 +123,7 @@
               />
               <h3 class="taste-subtitle">Milk</h3>
             </li>
-            <li>
+            <li class="taste-item-third">
               <img class="taste-image"
                 src="/images/taste-img-3.png"
                 alt="nuts"
@@ -130,7 +132,7 @@
               />
               <h3 class="taste-subtitle">nuts</h3>
             </li class="taste-item">
-            <li>
+            <li class="taste-item-fourth">
               <img class="taste-image"
                 src="/images/taste-img-4.png"
                 alt="sEMI - SWEET CHOCOLATE"
@@ -145,44 +147,48 @@
       <section id="made" class="made">
         <div class="container">
           <h2 class="made-title section-title">hOW IT’S <span>made?</span></h2>
-          <img class="made-image"
-            src="/images/taste-img-5.jpg"
-            alt="Liquid chocolate"
-            width="600"
-            height="400"
-          />
-          <h3 class="made-subtitle">
-            Try our chocolates today and discover the perfect balance of flavor
-          </h3>
-          <ul class="made-list">
-            <li class="made-item">
-              <p class="made-item-text">
-                Heat the milk in a saucepan without bringing it to a boil. Add
-                sugar and cocoa powder.
-              </p>
-            </li>
-            <li class="made-item">
-              <p class="made-item-text">
-                At the same time, prepare a water bath. Melt the butter on it.
-              </p>
-            </li>
-            <li class="made-item">
-              <p class="made-item-text">
-                "Mix" the milk mixture and already liquid butter. Mix thoroughly
-                with a silicone spatula so that the mass becomes uniform and
-                silky.
-              </p>
-            </li>
-            <li class="made-item">
-              <p class="made-item-text">Heat the mixture over low heat, letting it barely boil.</p>
-            </li>
-            <li class="made-item">
-              <p class="made-item-text">
-                Pour the chocolate into special containers (can be replaced with
-                ice molds). Allow to cool and harden.
-              </p>
-            </li>
-          </ul>
+          <div class="made-container">
+            <img class="made-image"
+              src="/images/taste-img-5.jpg"
+              alt="Liquid chocolate"
+              width="600"
+              height="400"
+            />
+            <div class="made-content">
+              <h3 class="made-subtitle">
+                Try our chocolates today and discover the perfect balance of flavor
+              </h3>
+              <ul class="made-list">
+                <li class="made-item">
+                  <p class="made-item-text">
+                    Heat the milk in a saucepan without bringing it to a boil. Add
+                    sugar and cocoa powder.
+                  </p>
+                </li>
+                <li class="made-item">
+                  <p class="made-item-text">
+                    At the same time, prepare a water bath. Melt the butter on it.
+                  </p>
+                </li>
+                <li class="made-item">
+                  <p class="made-item-text">
+                    "Mix" the milk mixture and already liquid butter. Mix thoroughly
+                    with a silicone spatula so that the mass becomes uniform and
+                    silky.
+                  </p>
+                </li>
+                <li class="made-item">
+                  <p class="made-item-text">Heat the mixture over low heat, letting it barely boil.</p>
+                </li>
+                <li class="made-item">
+                  <p class="made-item-text">
+                    Pour the chocolate into special containers (can be replaced with
+                    ice molds). Allow to cool and harden.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section id="loved" class="loved">
