--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
           <a class="header-logo" href="/index.html"
             ><span class="header-logo-italic">SIMPLY</span> CHOCOLATE</a
           >
-          <ul class="header-menu-list">
+        </nav>
+        <ul class="header-menu-list">
             <li class="header-menu-item">
               <a class="header-menu-link" href="">Home</a>
             </li>
@@ -39,7 +40,14 @@
               <a class="header-menu-link" href="#loved">Chocolate is loved</a>
             </li>
           </ul>
-        </nav>
+        <ul class="header-soc-list">
+          <li class="header-soc-item"><a href="" class="header-soc-link"><svg class="header-soc-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg></a></li>
+          <li class="header-soc-item"><a href="" class="header-soc-link"><svg class="header-soc-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg></a></li>
+        </ul>
       </div>
     </header>
     <main>
