--- a/index.html
+++ b/index.html
@@ -123,12 +123,15 @@
               <h3 class="taste-subtitle">mILK CHOCOLATE</h3>
             </li>
             <li class="taste-item-second">
-              <img class="taste-image"
-                src="/images/taste-img-2.png"
-                alt="Milk"
-                width="206"
-                height="160"
-              />
+              <div class="taste-cover-wrap">
+                <img class="taste-image"
+                  src="/images/taste-img-2.png"
+                  alt="Milk"
+                  width="206"
+                  height="160"
+                />
+                <p class="taste-cover-text">Milk is a white liquid food produced by the mammary glands of mammals. It is the primary source of nutrition for young mammals (including breastfed human infants) before they are able to digest solid food.Early-lactation milk, which is called colostrum, contains antibodies that strengthen the immune system.</p>
+              </div>
               <h3 class="taste-subtitle">Milk</h3>
             </li>
             <li class="taste-item-third">
