--- a/index.html
+++ b/index.html
@@ -254,21 +254,33 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <p class="footer-text"><span>Chocolate</span> a delicious cure for a bad day</p>
-        <p class="footer-subtitle">Contact us</p>
-        <address class="footer-adress">
-          <ul class="footer-adress-list">
-            <li class="footer-adress-item"><a class="footer-adress-link" href="tel:+380684439426">+380 (68) 443-94-26</a></li>
-            <li class="footer-adress-item">
-              <a class="footer-adress-link" href="mailto:simplycthaoc@gmail.com">simplycthaoc@gmail.com</a>
-            </li>
+        <div class="footer-top">
+          <p class="footer-text"><span>Chocolate</span> a delicious cure for a bad day</p>
+          <div class="footer-contacts">
+            <p class="footer-subtitle">Contact us</p>
+            <address class="footer-adress">
+              <ul class="footer-adress-list">
+                <li class="footer-adress-item"><a class="footer-adress-link" href="tel:+380684439426">+380 (68) 443-94-26</a></li>
+                <li class="footer-adress-item">
+                  <a class="footer-adress-link" href="mailto:simplycthaoc@gmail.com">simplycthaoc@gmail.com</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <ul class="footer-menu-list">
+            <li class="footer-menu-item"><a class="footer-menu-link" href="">Home</a></li>
+            <li class="footer-menu-item"><a class="footer-menu-link" href="#made">How it’s made?</a></li>
+            <li class="footer-menu-item"><a class="footer-menu-link" href="#loved">Chocolate is loved</a></li>
           </ul>
-        </address>
-        <ul class="footer-menu-list">
-          <li class="footer-menu-item"><a class="footer-menu-link" href="">Home</a></li>
-          <li class="footer-menu-item"><a class="footer-menu-link" href="#made">How it’s made?</a></li>
-          <li class="footer-menu-item"><a class="footer-menu-link" href="#loved">Chocolate is loved</a></li>
-        </ul>
+          <form class="footer-form">
+            <label aria-label="footer-email" class="footer-field">
+              <input type="email" name="footer-email" id="" placeholder="Enter your email" class="footer-input">
+            </label>
+            <button type="submit" class="footer-btn">Subscribe</button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop">
@@ -307,7 +319,15 @@
 
           <div class="modal-field">
             <label for="user-comment" class="modal-label">Comment</label>
-            <textarea name="user-comment" id="user-comment" class="modal-textarea" placeholder="Text input"></textarea>
+            <textarea name="user-comment" id="user-comment" class="modal-textarea" placeholder="Please, write your comment..."></textarea>
+          </div>
+          <div class="modal-field">
+            <input type="checkbox" name="policy" id="policy" class="modal-check visually-hidden" value="true">
+            <label for="policy" class="modal-check-text"><span class="modal-check-item">
+              <svg class="check-icon" width="10" height="10">
+                <use href="./images/icons.svg#icon-check"></use>
+              </svg>
+            </span>I accept the terms and conditions of the <a href="" class="privacy-link"> Privacy Policy</a></label>
           </div>
           <button type="submit" class="modal-submit-btn">Send</button>
         </form>
